--- a/EX1/index.html
+++ b/EX1/index.html
@@ -14,7 +14,7 @@
             <br><strong>HTML is the skeletion of all web page.</strong>it's offen the first language learned by deverlopers, marketers, and designers and is core to front-end deverloments work.
             <br>
             <br>HTML HTML provice structure to the content appearing on a website, such as
-            <a href="image/Angkor_wat.jpg">images,</a>text, or <a href="video/cat.mp4">videos.</a>
+            <a href="image/cat.jpg">images,</a>text, or <a href="video/cat.mp4">videos.</a>
         </p>
         <h2>Conclusion</h2>
         <p>hello</p>
