--- a/EX3/services.html
+++ b/EX3/services.html
@@ -1,12 +1,23 @@
 <!-- Write your code here -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- </head>
- <body>
-    
- </body>
- </html>
+</head>
+<body>
+    <p>
+        <a href="home.html">HOME</a> | <a href="about.html">ABOUT US</a> | <a href="services.html">OUR SEVICES</a> | <a href="contact.html">CONTACTS</a>
+    </p>
+    <h1>A space for your creativity</h1>
+    <img src="image/home.jpg"/>
+    <p>we provice a free cost online editor to create amazing sildes.
+        <ul style="list-style-type: circle">
+            <li>Don't wait to try our new slide editor</li>
+            <li>Share your idear with your friend</li>
+            <li>Enjoy our AI support to worlk efficiently</li>
+        </ul>
+    </p>
+</body>
+</html>
