--- a/EX3/about.html
+++ b/EX3/about.html
@@ -11,7 +11,10 @@
     </p>
     <h1>About Us</h1>
     <img src="image/home.jpg"/>
-    <p>our product is online cost for editor.and we have AI for soport work</p>
+    <p>description : business mission and history.<br>
+        information about team and leader ship.<br>
+        company value and culture.
+    </p>
     <p>we provice a free cost online editor to create amazing sildes.
         <ul style="list-style-type: circle">
             <li>Don't wait to try our new slide editor</li>
