--- a/EX3/contact.html
+++ b/EX3/contact.html
@@ -18,5 +18,10 @@
         </ul>
         <img src="image/contact.png"/>
     </p>
+    <p>
+        address.<br>
+        email address.<br>
+        contact to submit inquiries<br>
+    </p>
  </body>
  </html>
