--- a/EX3/services.html
+++ b/EX3/services.html
@@ -12,12 +12,9 @@
     </p>
     <h1>A space for your creativity</h1>
     <img src="image/home.jpg"/>
-    <p>we provice a free cost online editor to create amazing sildes.
-        <ul style="list-style-type: circle">
-            <li>Don't wait to try our new slide editor</li>
-            <li>Share your idear with your friend</li>
-            <li>Enjoy our AI support to worlk efficiently</li>
-        </ul>
+    <p>a list of all the products or services<br>
+        details description of each products include feature and benefits<br>
+        pricing information
     </p>
 </body>
 </html>
