--- a/EX3/about.html
+++ b/EX3/about.html
@@ -10,17 +10,11 @@
         <a href="home.html">HOME</a> | <a href="about.html">ABOUT US</a> | <a href="services.html">OUR SEVICES</a> | <a href="contact.html">CONTACTS</a>
     </p>
     <h1>About Us</h1>
-    <img src="image/home.jpg"/>
-    <p>description : business mission and history.<br>
-        information about team and leader ship.<br>
-        company value and culture.
-    </p>
-    <p>we provice a free cost online editor to create amazing sildes.
-        <ul style="list-style-type: circle">
-            <li>Don't wait to try our new slide editor</li>
-            <li>Share your idear with your friend</li>
-            <li>Enjoy our AI support to worlk efficiently</li>
-        </ul>
+    <img src="image/about.png"/>
+    <p>Our team of skilled designers offers professional slide design services at no cost.<br>
+        Create captivating presentations that leave a lasting impression.<br>
+        Let us handle the design, so you can focus on your content.<br>
+        <a href="services.html">Start your free design today!</a>
     </p>
 </body>
 </html>
