--- a/EX3/services.html
+++ b/EX3/services.html
@@ -10,11 +10,15 @@
     <p>
         <a href="home.html">HOME</a> | <a href="about.html">ABOUT US</a> | <a href="services.html">OUR SEVICES</a> | <a href="contact.html">CONTACTS</a>
     </p>
-    <h1>A space for your creativity</h1>
-    <img src="image/home.jpg"/>
-    <p>a list of all the products or services<br>
-        details description of each products include feature and benefits<br>
-        pricing information
+    <h1>Our Service</h1>
+    <img src="image/service.jpg"/>
+    <p>
+        <h3>product :</h3>
+        <ul style="list-style-type: circle">
+            <li>Video</li>
+            <li>PDF</li>
+            <li>Slide</li>
+        </ul>
     </p>
 </body>
 </html>
