--- a/EX4/index.html
+++ b/EX4/index.html
@@ -9,12 +9,12 @@
       table {
         font-family: arial, sans-serif;
         border-collapse: collapse;
-        width: 100%;
+        width: 50%;
       }
       td, th {
         border: 1px solid #000000;
         text-align: left;
-        padding: 8px;
+        padding: 10px;
       }
       tr:nth-child(1) {
         background-color: #0000006f;
@@ -26,24 +26,28 @@
     <table>
       <tr>
          <td>Product Name</td>
+         <td>picture</td>
          <td>Price</td>
          <td>Quantity</td>
          <td>In Stock</td>
       </tr>
       <tr>
          <td>C# Book</td>
+         <td><img src="image/book.png"></td>
          <td>$10</td>
          <td>5</td>
          <td>YES</td>
       </tr>
       <tr>
          <td>CADT Polo</td>
+         <td><img src="image/cadt_polo.jpg"></td>
          <td>$12</td>
          <td>60</td>
          <td>YES</td>
       </tr>
       <tr>
          <td>CADT mouse</td>
+         <td>No Image</td>
          <td>$100</td>
          <td>3</td>
          <td>NO</td>
