--- a/EX3/contact.html
+++ b/EX3/contact.html
@@ -2,6 +2,7 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -10,9 +11,9 @@
     <p>
         <a href="home.html">HOME</a> | <a href="about.html">ABOUT US</a> | <a href="services.html">OUR SEVICES</a> | <a href="contact.html">CONTACTS</a>
     </p>
-    <h1>Let's keep in touch!</h1>
+    <h1>Contact Us</h1>
     <p>
-        <ul style="list-style-type: circle">
+        <ul>
             <li>You contact us <a href="mailto : Vat.vann@student.cadt.edu.kh">by mail</a></li>
             <li>You can also check <a href="home.html">our website</a></li>
         </ul>
