--- a/EX3/home.html
+++ b/EX3/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -12,7 +13,7 @@
     <h1>A space for your creativity</h1>
     <img src="image/home.jpg"/>
     <p>we provice a free cost online editor to create amazing sildes.
-        <ul style="list-style-type: circle">
+        <ul>
             <li>Don't wait to try our new slide editor</li>
             <li>Share your idear with your friend</li>
             <li>Enjoy our AI support to worlk efficiently</li>
