--- a/EX3/services.html
+++ b/EX3/services.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -13,8 +14,8 @@
     <h1>Our Service</h1>
     <img src="image/service.jpg"/>
     <p>
-        <h3>product :</h3>
-        <ul style="list-style-type: circle">
+        our product :
+        <ul>
             <li>Video</li>
             <li>PDF</li>
             <li>Slide</li>
