--- a/EX3/contact.html
+++ b/EX3/contact.html
@@ -11,7 +11,7 @@
     <p>
         <a href="home.html">HOME</a> | <a href="about.html">ABOUT US</a> | <a href="services.html">OUR SEVICES</a> | <a href="contact.html">CONTACTS</a>
     </p>
-    <h1>Contact Us</h1>
+    <h1>Let's keep in touch!</h1>
     <p>
         <ul>
             <li>You contact us <a href="mailto : Vat.vann@student.cadt.edu.kh">by mail</a></li>
